Add permissions to the workflow configuration

--- a/.github/workflows/ultimate-universal-analyzer.yml
+++ b/.github/workflows/ultimate-universal-analyzer.yml
@@ -1,5 +1,10 @@
 name: Ultimate Universal Analyzer
 
+permissions:
+  contents: write
+  pull-requests: write
+  security-events: write
+
 on:
   push:
     branches: [main]
